unpackaged/main/default/objects/pro_HR_Doc_Link__c/pro_HR_Doc_Link__c.object-meta.xml
<CustomObject>
    <description>AB 16/09/2023 - Created by Prodigy</description>
    <label>Employee Documents</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Employee Documents</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>