unpackaged/main/default/objects/pro_HR_Doc_Link__c/fields/pro_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Acceptance_Date__c</fullName>
    <description>AB 20/06/2023 - prodigy</description>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>