unpackaged/main/default/objects/pro_HR_Doc_Link__c/fields/pro_Employee__c.field-meta.xml
<CustomField>
    <fullName>pro_Employee__c</fullName>
    <description>AB 16/06/2023</description>
    <label>Employee</label>
    <referenceTo>GlicW__Resource__c</referenceTo>
    <relationshipName>pro_HR_Doc_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>