unpackaged/main/default/objects/pro_HR_Doc_Link__c/fields/pro_HR_Docs__c.field-meta.xml
<CustomField>
    <fullName>pro_HR_Docs__c</fullName>
    <description>AB 16/09/2023 - Created by Prodigy</description>
    <label>HR Documents</label>
    <referenceTo>pro_HR_Doc__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>pro_HR_Doc_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>