unpackaged/main/default/objects/pro_HR_Doc_Link__c/fields/pro_HR_Link_I_Accept__c.field-meta.xml
<CustomField>
    <fullName>pro_HR_Link_I_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this box, you are agreeing to have read the document.</inlineHelpText>
    <label>I Accept</label>
    <type>Checkbox</type>
</CustomField>