unpackaged/main/default/objects/pro_HR_Doc_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Employee__c</columns>
    <columns>pro_HR_Docs__c</columns>
    <columns>pro_HR_Link_I_Accept__c</columns>
    <columns>pro_Acceptance_Date__c</columns>
    <columns>pro_Department__c</columns>
    <columns>pro_Office__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>